--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
                 <span>Scroll Down</span>
                 <div class="mouse"></div>
             </div> -->
+
+            <!-- Floating Decorative Icons -->
+            <div class="hero-floats">
+                <span class="float-icon fi-1">&#x2731;</span>
+                <span class="float-icon fi-2">&#x2731;</span>
+                <span class="float-icon fi-3">&#x2B22;</span>
+                <span class="float-icon fi-4">+</span>
+                <span class="float-icon fi-5">&#x25CF;</span>
+                <span class="float-icon fi-6">&#x2731;</span>
+                <span class="float-icon fi-7">&#x25B2;</span>
+            </div>
         </section>
 
         <!-- Redesigned About Us Section (Media on Left, Title/Content on Right) -->
