--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#" class="logo">METRIC<span>MAGNATE</span></a>
             <ul class="nav-links">
                 <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="#services" class="nav-link">Services</a></li>
                 <li><a href="#work" class="nav-link">Our Work</a></li>
                 <li><a href="#contact" class="nav-link btn-primary">Let's Talk</a></li>
