--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="#services" class="nav-link">Services</a></li>
                 <li><a href="#work" class="nav-link">Our Work</a></li>
-                <li><a href="#contact" class="nav-link btn-primary">Let's Talk</a></li>
+                <li><a href="contact.html" class="nav-link">Contact Us</a></li>
             </ul>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
@@ -299,6 +299,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Why Choose Us Section (Scattered Card Layout) -->
         <section class="why-choose-us">
             <div class="why-orb-left"></div>
