--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <li><a href="about.html" class="nav-link">About</a></li>
                 <li><a href="index.html#services" class="nav-link">Services</a></li>
                 <li><a href="index.html#work" class="nav-link">Our Work</a></li>
-                <li><a href="index.html#contact" class="nav-link btn-primary">Let's Talk</a></li>
+                <li><a href="contact.html" class="nav-link">Contact Us</a></li>
             </ul>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
