--- a/index.html
+++ b/index.html
@@ -44,7 +44,16 @@
             <ul class="nav-links">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="about.html" class="nav-link">About</a></li>
-                <li><a href="#services" class="nav-link">Services</a></li>
+                <li class="nav-dropdown">
+                    <a href="#services" class="nav-link">Services <i class="fas fa-chevron-down nav-dd-arrow"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="content-strategy.html"><i class="fas fa-pen-nib"></i> Content Strategy &
+                                Scripts</a></li>
+                        <li><a href="seo.html"><i class="fas fa-chart-line"></i> Institutional SEO</a></li>
+                        <li><a href="brand-identity.html"><i class="fas fa-palette"></i> Brand Identity & UI/UX</a>
+                        </li>
+                    </ul>
+                </li>
                 <li><a href="#work" class="nav-link">Our Work</a></li>
                 <li><a href="contact.html" class="nav-link">Contact Us</a></li>
             </ul>
