--- a/index.html
+++ b/index.html
@@ -262,25 +262,43 @@
                 <!-- Row 1: Right to Left -->
                 <div class="marquee-track track-rtl">
                     <div class="marquee-content">
-                        <div class="brand-item"><img src="https://logo.clearbit.com/google.com" alt="Google"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/hubspot.com" alt="HubSpot"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/shopify.com" alt="Shopify"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/meta.com" alt="Meta"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/semrush.com" alt="Semrush"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/mailchimp.com" alt="Mailchimp">
-                        </div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/salesforce.com" alt="Salesforce">
+                        <div class="brand-item"><img src="https://lchafrica.com/img/cropped-FINAL-LOGO-svg.png"
+                                alt="Google"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/ecovana-logo_a1r4ct.webp"
+                                alt="HubSpot"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580793/aiims_pleq0o.webp"
+                                alt="Shopify"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/cloudnine-logo_mcocql.webp"
+                                alt="Meta"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/dst_k894jm.webp"
+                                alt="Semrush"></div>
+                        <div class="brand-item"><img
+                                src="	https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/ivy-new-logo_tnjcme.webp"
+                                alt="Mailchimp">
                         </div>
                     </div>
                     <div class="marquee-content" aria-hidden="true">
-                        <div class="brand-item"><img src="https://logo.clearbit.com/google.com" alt="Google"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/hubspot.com" alt="HubSpot"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/shopify.com" alt="Shopify"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/meta.com" alt="Meta"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/semrush.com" alt="Semrush"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/mailchimp.com" alt="Mailchimp">
-                        </div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/salesforce.com" alt="Salesforce">
+                        <div class="brand-item"><img src="https://lchafrica.com/img/cropped-FINAL-LOGO-svg.png"
+                                alt="Google"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/ecovana-logo_a1r4ct.webp"
+                                alt="HubSpot"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580793/aiims_pleq0o.webp"
+                                alt="Shopify"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/cloudnine-logo_mcocql.webp"
+                                alt="Meta"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/dst_k894jm.webp"
+                                alt="Semrush"></div>
+                        <div class="brand-item"><img
+                                src="	https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/ivy-new-logo_tnjcme.webp"
+                                alt="Mailchimp">
                         </div>
                     </div>
                 </div>
@@ -288,22 +306,44 @@
                 <!-- Row 2: Left to Right -->
                 <div class="marquee-track track-ltr">
                     <div class="marquee-content">
-                        <div class="brand-item"><img src="https://logo.clearbit.com/stripe.com" alt="Stripe"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/slack.com" alt="Slack"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/notion.so" alt="Notion"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/figma.com" alt="Figma"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/adobe.com" alt="Adobe"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/zoom.us" alt="Zoom"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/asana.com" alt="Asana"></div>
+                        <div class="brand-item"><img src="https://lchafrica.com/img/cropped-FINAL-LOGO-svg.png"
+                                alt="Google"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/ecovana-logo_a1r4ct.webp"
+                                alt="HubSpot"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580793/aiims_pleq0o.webp"
+                                alt="Shopify"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/cloudnine-logo_mcocql.webp"
+                                alt="Meta"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/dst_k894jm.webp"
+                                alt="Semrush"></div>
+                        <div class="brand-item"><img
+                                src="	https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/ivy-new-logo_tnjcme.webp"
+                                alt="Mailchimp">
+                        </div>
                     </div>
                     <div class="marquee-content" aria-hidden="true">
-                        <div class="brand-item"><img src="https://logo.clearbit.com/stripe.com" alt="Stripe"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/slack.com" alt="Slack"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/notion.so" alt="Notion"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/figma.com" alt="Figma"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/adobe.com" alt="Adobe"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/zoom.us" alt="Zoom"></div>
-                        <div class="brand-item"><img src="https://logo.clearbit.com/asana.com" alt="Asana"></div>
+                        <div class="brand-item"><img src="https://lchafrica.com/img/cropped-FINAL-LOGO-svg.png"
+                                alt="Google"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/ecovana-logo_a1r4ct.webp"
+                                alt="HubSpot"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580793/aiims_pleq0o.webp"
+                                alt="Shopify"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/cloudnine-logo_mcocql.webp"
+                                alt="Meta"></div>
+                        <div class="brand-item"><img
+                                src="https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/dst_k894jm.webp"
+                                alt="Semrush"></div>
+                        <div class="brand-item"><img
+                                src="	https://res.cloudinary.com/damfndmrm/image/upload/v1769580794/ivy-new-logo_tnjcme.webp"
+                                alt="Mailchimp">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -408,7 +448,7 @@
                                 alt="Fintech Revolution">
                         </div>
                         <div class="work-item">
-                            <img src="https://images.unsplash.com/photo-1542744094-24638eff58bb?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                            <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
                                 alt="Data Analytics Pro">
                         </div>
                         <div class="work-item">
@@ -416,7 +456,7 @@
                                 alt="E-comm Scale">
                         </div>
                         <div class="work-item">
-                            <img src="https://images.unsplash.com/photo-1576091160550-217359f42f8c?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                            <img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
                                 alt="AI Health Track">
                         </div>
                         <div class="work-item">
