--- a/brand-identity.html
+++ b/brand-identity.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="svc-hero-visual">
-                        <img src="https://illustrations.popsy.co/amber/designer.svg" alt="Brand Identity Illustration">
+                        <img src="https://illustrations.popsy.co/green/designer.svg" alt="Brand Identity Illustration">
                     </div>
                 </div>
                 <div class="svc-hero-bottom">
