--- a/content-strategy.html
+++ b/content-strategy.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="svc-hero-visual">
-                        <img src="https://illustrations.popsy.co/amber/creative-work.svg"
+                        <img src="https://illustrations.popsy.co/green/creative-work.svg"
                             alt="Content Strategy Illustration">
                     </div>
                 </div>
