--- a/seo.html
+++ b/seo.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                     <div class="svc-hero-visual">
-                        <img src="https://illustrations.popsy.co/amber/man-with-laptop-on-the-floor.svg"
+                        <img src="https://illustrations.popsy.co/green/digital-nomad.svg"
                             alt="SEO Services Illustration">
                     </div>
                 </div>
