--- a/index.html
+++ b/index.html
@@ -591,11 +591,9 @@
                 <div class="footer-col">
                     <h4>Services</h4>
                     <ul>
-                        <li><a href="#">Performance Marketing</a></li>
-                        <li><a href="#">SEO Domination</a></li>
-                        <li><a href="#">UI/UX Design</a></li>
-                        <li><a href="#">Creative Strategy</a></li>
-                        <li><a href="#">Brand Identity</a></li>
+                        <li><a href="content-strategy.html">Content Strategy</a></li>
+                        <li><a href="seo.html">Institutional SEO</a></li>
+                        <li><a href="brand-identity.html">Brand Identity</a></li>
                     </ul>
                 </div>
                 <div class="footer-col contact-col">
