--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@
                                     <label for="phone">Phone Number</label>
                                     <input type="tel" id="phone" name="phone" placeholder="+91 98765 43210">
                                 </div>
-                                <div class="form-group">
+                                <!-- <div class="form-group">
                                     <label for="budget">Project Budget</label>
                                     <select id="budget" name="budget">
                                         <option value="" disabled selected>Select range</option>
@@ -141,21 +141,22 @@
                                         <option value="3l-5l">₹3L - ₹5 Lakhs</option>
                                         <option value="5l+">₹5 Lakhs+</option>
                                     </select>
+                                </div> -->
+                                <div class="form-group">
+                                    <label for="service">Service Interested In</label>
+                                    <select id="service" name="service">
+                                        <option value="" disabled selected>Choose a service</option>
+                                        <option value="seo">SEO & Search Marketing</option>
+                                        <option value="performance">Performance Marketing</option>
+                                        <option value="social">Social Media Marketing</option>
+                                        <option value="web">Web Development & Design</option>
+                                        <option value="branding">Brand Identity & Strategy</option>
+                                        <option value="content">Content Marketing</option>
+                                        <option value="other">Other</option>
+                                    </select>
                                 </div>
                             </div>
-                            <div class="form-group full-width">
-                                <label for="service">Service Interested In</label>
-                                <select id="service" name="service">
-                                    <option value="" disabled selected>Choose a service</option>
-                                    <option value="seo">SEO & Search Marketing</option>
-                                    <option value="performance">Performance Marketing</option>
-                                    <option value="social">Social Media Marketing</option>
-                                    <option value="web">Web Development & Design</option>
-                                    <option value="branding">Brand Identity & Strategy</option>
-                                    <option value="content">Content Marketing</option>
-                                    <option value="other">Other</option>
-                                </select>
-                            </div>
+
                             <div class="form-group full-width">
                                 <label for="message">Project Details</label>
                                 <textarea id="message" name="message" rows="5"
@@ -190,7 +191,7 @@
                                     </div>
                                     <div>
                                         <span class="info-label">Call Us</span>
-                                        <a href="tel:+919876543210">+91 98765 43210</a>
+                                        <a href="tel:+919876543210">+91 98702 71198</a>
                                     </div>
                                 </div>
                                 <div class="info-item">
@@ -213,15 +214,17 @@
                                 </div>
                             </div>
 
-                            <div class="info-social">
+                            <!-- <div class="info-social">
                                 <span>Follow Us</span>
+                                Social Media (temporarily hidden)
                                 <div class="social-links">
-                                    <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                                    <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
-                                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                                    <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.instagram.com/metricmagnate" target="_blank" rel="noopener" class="social-link"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.linkedin.com/company/metricmagnate" target="_blank" rel="noopener" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                                    <a href="https://twitter.com/metricmagnate" target="_blank" rel="noopener" class="social-link"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.facebook.com/metricmagnate" target="_blank" rel="noopener" class="social-link"><i class="fab fa-facebook-f"></i></a>
                                 </div>
-                            </div>
+                               
+                            </div> -->
                         </div>
 
                     </div>
@@ -232,8 +235,8 @@
         <!-- Full-Width Map Section -->
         <section class="map-section">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224346.54004883948!2d77.06889754999999!3d28.527280000000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd5b347eb62d%3A0x52c2b7494e204dce!2sNew%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1708000000000!5m2!1sen!2sin"
-                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3511.0065453021835!2d77.28448727507744!3d28.461786375770597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce7a0c1db95d1%3A0x8c5d8d5b0e4f4e9e!2sCharmwood%20Village%2C%20Surajkund%20Road%2C%20Faridabad%2C%20Haryana!5e0!3m2!1sen!2sin!4v1708000000001!5m2!1sen!2sin"
+                width="100%" style="border:0; display:block;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
@@ -322,12 +325,18 @@
                     <a href="index.html" class="footer-logo">Metric <span>Magnate</span></a>
                     <p class="brand-tagline">Elevating digital metrics for ambitious brands. We blend data science with
                         surgical precision to dominate search and social landscapes.</p>
+                    <!-- Social Media (temporarily hidden)
                     <div class="footer-social">
-                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/metricmagnate" target="_blank" rel="noopener"
+                            class="social-icon"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/metricmagnate" target="_blank" rel="noopener"
+                            class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://twitter.com/metricmagnate" target="_blank" rel="noopener"
+                            class="social-icon"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/metricmagnate" target="_blank" rel="noopener"
+                            class="social-icon"><i class="fab fa-facebook-f"></i></a>
                     </div>
+                    -->
                 </div>
                 <div class="footer-col">
                     <h4>Navigation</h4>
