--- a/seo.html
+++ b/seo.html
@@ -441,12 +441,14 @@
                     <a href="index.html" class="footer-logo">Metric <span>Magnate</span></a>
                     <p class="brand-tagline">Elevating digital metrics for ambitious brands. We blend data science with
                         surgical precision to dominate search and social landscapes.</p>
+                    <!-- Social Media (temporarily hidden)
                     <div class="footer-social">
-                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/metricmagnate" target="_blank" rel="noopener" class="social-icon"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/metricmagnate" target="_blank" rel="noopener" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://twitter.com/metricmagnate" target="_blank" rel="noopener" class="social-icon"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/metricmagnate" target="_blank" rel="noopener" class="social-icon"><i class="fab fa-facebook-f"></i></a>
                     </div>
+                    -->
                 </div>
                 <div class="footer-col">
                     <h4>Navigation</h4>
