--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
                                 <div class="about-svc-divider"></div>
                                 <p class="about-svc-desc">High-retention video scripts and podcast production that turn
                                     viewers into loyalists. We script for engagement and produce for impact.</p>
-                                <a href="contact.html" class="about-svc-link">Learn More <i
+                                <a href="content-strategy.html" class="about-svc-link">Learn More <i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -214,7 +214,7 @@
                                 <div class="about-svc-divider"></div>
                                 <p class="about-svc-desc">Building long-term organic authority to ensure you own the
                                     search results in your niche. Market dominance starts with searchability.</p>
-                                <a href="contact.html" class="about-svc-link">Learn More <i
+                                <a href="institutional-seo.html" class="about-svc-link">Learn More <i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -230,7 +230,7 @@
                                 <div class="about-svc-divider"></div>
                                 <p class="about-svc-desc">Crafting digital interfaces that look premium and function
                                     with surgical precision. Design that converts while inspiring trust.</p>
-                                <a href="contact.html" class="about-svc-link">Learn More <i
+                                <a href="brand-identity.html" class="about-svc-link">Learn More <i
                                         class="fas fa-arrow-right"></i></a>
                             </div>
                         </div>
